turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: not found: value letre
  else if(letre=="L"){
          ^